server/server.log
file:///app/server/server.js:20
import { fileURLToPath } from 'url';
         ^^^^^^^^^^^^^

SyntaxError: Identifier 'fileURLToPath' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:154:19)

Node.js v22.17.1
